tests/baselines/reference/importDeclWithDeclareModifier.errors.txt
importDeclWithDeclareModifier.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importDeclWithDeclareModifier.ts(5,9): error TS1029: 'export' modifier must precede 'declare' modifier.
importDeclWithDeclareModifier.ts(5,29): error TS2694: Namespace 'x' has no exported member 'c'.


==== importDeclWithDeclareModifier.ts (3 errors) ====
    module x {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface c {
        }
    }
    declare export import a = x.c;
            ~~~~~~
!!! error TS1029: 'export' modifier must precede 'declare' modifier.
                                ~
!!! error TS2694: Namespace 'x' has no exported member 'c'.
    var b: a;
    